summative.moria.Moria.scala.error
Compilation error:
Moria:27: error: not found: value EAST
  if (getDirection() == EAST) {
                        ^Moria:41: error: not found: value SOUTH
  } else if (getDirection() == SOUTH) {
                               ^Moria:48: error: not found: value WEST
  } else if (getDirection() == WEST) {
                               ^